<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="about_content">全国の鉄道・航空路線・バスなどの経路・運賃の検索や、全国の鉄道の時刻表、駅情報、路線図、運行情報を閲覧できるアプリケーションです。</string>
    <string name="about_copyright">著作権表示</string>
    <string name="about_help">ヘルプ・お問い合わせはHELP_LINKからご覧ください。</string>
    <string name="about_help_link">こちら</string>
    <string name="about_help_link_url">http://www.yahoo-help.jp/app/home/p/610/</string>
    <string name="about_os">対応OS</string>
    <string name="about_os_content">"Android OS 2.2以上
※ただし、一部の機種では正常に動作しない場合があります。"</string>
    <string name="about_privacy_link">http://docs.yahoo.co.jp/docs/info/terms/chapter1.html#cf2nd</string>
    <string name="about_promo">現在対応している路線バス事業者は、PROMO_LINKからご確認いただけます。</string>
    <string name="about_promo_link">こちら</string>
    <string name="about_promo_link_url">http://transit.loco.yahoo.co.jp/main/buslist</string>
    <string name="about_software_link">http://docs.yahoo.co.jp/docs/info/terms/chapter1.html#cf5th</string>
    <string name="about_terms">Yahoo! JAPAN利用規約</string>
    <string name="about_terms_content">"本アプリケーションは、Yahoo! JAPAN利用規約（ソフトウエアに関する規則を含みます）、およびその他のご利用条件に従い利用いただく必要があります。
 以下の各利用条件をご確認のうえ、ご利用ください。

■Yahoo! JAPAN利用規約"</string>
    <string name="about_terms_link">http://docs.yahoo.co.jp/docs/info/terms/</string>
    <string name="about_timetable">時刻表について</string>
    <string name="about_title">このアプリケーションについて</string>
    <string name="ad_appli_id">10019</string>
    <string name="address_reg_finish_btn_pref">設定を確認する</string>
    <string name="address_reg_finish_btn_top">経路検索する</string>
    <string name="address_reg_finish_message">住所を設定しました。</string>
    <string name="address_reg_finish_title">設定完了</string>
    <string name="alarm_confirm_delete">チェックを入れたアラームを削除</string>
    <string name="alarm_confirm_no_alarm">設定中アラームはありません。</string>
    <string name="alarm_confirm_title">設定中アラーム</string>
    <string name="alarm_length">%d秒間</string>
    <string name="alarm_length_setting">アラームの長さ</string>
    <string name="alarm_length_setting_info">通知方法に関しましては、端末の設定に関わらずバイブレーション通知のみとなります。</string>
    <string name="alarm_minutes">%d分前</string>
    <string name="alarm_minutes_message">%d分前です</string>
    <string name="alarm_minutes_setting">時間設定</string>
    <string name="alarm_setting_confirm">設定中のアラームを確認</string>
    <string name="alarm_setting_preference">アラーム時間設定</string>
    <string name="alarm_setting_station">乗降駅設定</string>
    <string name="alarm_setting_title">乗降アラーム設定</string>
    <string name="alerm_delete">設定中のアラームを削除しました。</string>
    <string name="alerm_delete_btn">設定中のアラームを削除</string>
    <string name="alerm_edit_desc">別のアラームを設定する場合は、設定中のアラームを一旦解除してください。</string>
    <string name="alerm_edit_label">に設定されています。</string>
    <string name="alerm_filtered">この内容で絞り込みを設定すると、設定済みのアラームが消えますが、よろしいですか？</string>
    <string name="api_assist">http://search.yahooapis.jp/SuggestSearchService/V4/webassistSearch?</string>
    <string name="api_assist_appid">dj0zaiZpPTA4cEZPVUxTN1ZZZCZzPWNvbnN1bWVyc2VjcmV0Jng9ZmE-</string>
    <string name="api_auth_appid">dj0zaiZpPUhhQVplR0NwcndzZSZzPWNvbnN1bWVyc2VjcmV0Jng9ZDI-</string>
    <string name="api_geo">http://geo.search.olp.yahooapis.jp/OpenLocalPlatform/V1/geoCoder</string>
    <string name="api_localsearch">http://search.olp.yahooapis.jp/OpenLocalPlatform/V1/localSearch</string>
    <string name="api_localsearch_appid">_0hXRFqxg65YCVpPmnDSk54HJb8k.oRkZtZmRKZNI1DiSMgjh3q.RrJOfEHVCg--</string>
    <string name="api_navi_appid">Rb6hNUWxg65gZgCQ1fJI01Uks9KJm_0pMbrF6do7gsAxcF2913o1K.pdc9aIsAuqdw--</string>
    <string name="api_navi_diainfo">http://navi.olp.yahooapis.jp/v2/diainfo</string>
    <string name="api_navi_direction">http://navi.olp.yahooapis.jp/v1/direction</string>
    <string name="api_navi_kousyou">http://navi.olp.yahooapis.jp/OpenLocalPlatform/V1/getKousyou</string>
    <string name="api_navi_regist">https://transit.yahooapis.jp/v1/registration/</string>
    <string name="api_navi_regist_rail">rail2</string>
    <string name="api_navi_regist_station">station</string>
    <string name="api_navi_search">http://navi.olp.yahooapis.jp/OpenLocalPlatform/V2/naviSearch</string>
    <string name="api_navi_timetable">http://navi.olp.yahooapis.jp/v1/timeTable/</string>
    <string name="api_navi_timetable_bus">http://navi.olp.yahooapis.jp/v1/timeTable/bus</string>
    <string name="api_navi_timetable_train">http://navi.olp.yahooapis.jp/v1/timeTable/train</string>
    <string name="api_push_host">subscription.push.yahooapis.jp</string>
    <string name="api_push_prod">yjtransit</string>
    <string name="api_push_subscribe">https://subscription.push.yahooapis.jp/push/v1/sub/auth/</string>
    <string name="api_push_updatetoken">https://subscription.push.yahooapis.jp/push/v1/subUpdateToken/auth/</string>
    <string name="api_push_userstopicid">https://subscription.push.yahooapis.jp/push/v1/usersTopicid/auth/</string>
    <string name="api_rev_geo">http://reverse.search.olp.yahooapis.jp/OpenLocalPlatform/V1/reverseGeoCoder</string>
    <string name="api_rev_geo_appid">ReGEAkexg64HQMkk0s0K5l1Nor68xIN3Fkw5mZHe3QxzJGrDDBMIGouqUlHWry.L2w--</string>
    <string name="api_shorturl">http://yjpn.yahooapis.jp/YjpnService/V1/add?</string>
    <string name="api_shorturl_appid">e54oQ.6xg67isWkS.MND94P1EtL6TQ2XwkOlPl4KjHD4J_e8C4ougyvddNjAlOgV</string>
    <string name="api_weather_day">http://ups.yahooapis.jp/Weather/V2/forecastByJIS</string>
    <string name="api_weather_day_appid" />
    <string name="app_kakao_cond">://conditions</string>
    <string name="app_kakao_exec">://exec</string>
    <string name="app_kakao_from_scheme">kakao88752607109543121</string>
    <string name="app_kakao_from_scheme_ios">ytransit</string>
    <string name="app_line_txt">line://msg/text/</string>
    <string name="app_name">Yahoo!乗換案内</string>
    <string name="app_name_long">乗換案内　Yahoo!ロコ</string>
    <string name="app_name_short">Y!乗換案内</string>
    <string name="app_pkg_name_map">jp.co.yahoo.android.apps.map</string>
    <string name="app_prop">transit_timer</string>
    <string name="app_timer_scheme">ytransit_timer://countdown</string>
    <string name="app_transit_scheme">ytransit://conditions</string>
    <string name="applicot_appid">dj0zaiZpPU1pQjdSa2JwY3VydCZzPWNvbnN1bWVyc2VjcmV0Jng9OGU-</string>
    <string name="applicot_id">c8f2c9ca</string>
    <string name="assent_message">"このアプリケーションは下記にアクセスできます。

現在地
・おおよその位置情報（ネットワーク基地局）
・精細な位置情報（GPS）"</string>
    <string name="assent_title">利用許諾</string>
    <string name="autoupdate_desc">自動更新を設定すると、毎日決まった時刻に時刻表データを自動更新します。</string>
    <string name="autoupdate_no">無し</string>
    <string name="autoupdate_no_station">"データが存在しません。
最寄り駅を登録してください。"</string>
    <string name="autoupdate_time">更新時刻</string>
    <string name="btn_add">追加</string>
    <string name="btn_back">戻る</string>
    <string name="btn_change">変更</string>
    <string name="btn_create">作成</string>
    <string name="btn_delete">削除</string>
    <string name="btn_download">ダウンロード</string>
    <string name="btn_finish">完了</string>
    <string name="btn_plus_add">＋追加</string>
    <string name="btn_search">検索</string>
    <string name="button_alarm_cancel">キャンセル</string>
    <string name="button_alarm_route">路線確認</string>
    <string name="button_alarm_set">設定</string>
    <string name="button_cancel">キャンセル</string>
    <string name="button_close">閉じる</string>
    <string name="button_nearstaton">最寄駅</string>
    <string name="button_ok">OK</string>
    <string name="button_roustesearch">ルートを表示</string>
    <string name="button_search">検索</string>
    <string name="button_search_history">履歴・メモから検索</string>
    <string name="button_search_mistake_form">検索結果に関するご指摘</string>
    <string name="button_search_type_current">現在時刻</string>
    <string name="button_search_type_first">始発</string>
    <string name="button_search_type_goal">到着</string>
    <string name="button_search_type_last">終電</string>
    <string name="button_search_type_start">出発</string>
    <string name="button_set">設定</string>
    <string name="diainfo_mail">運行情報メールの設定</string>
    <string name="diainfo_mail_description">運行情報をメールで受け取れます</string>
    <string name="diainfo_mail_description_sub">※Yahoo!路線情報の設定画面に移動</string>
    <string name="diainfo_mail_entry">メール設定※</string>
    <string name="err_msg_no_regist_rail">登録されている路線はありません。</string>
    <string name="label_date_condition_mark">■</string>
    <string name="label_entry_rail">＋路線登録はこちらから</string>
    <string name="label_here_station">周辺の駅</string>
    <string name="label_preferences_login">ログイン</string>
    <string name="menu_around">周辺の駅</string>
    <string name="menu_countdown">行き、帰り</string>
    <string name="menu_home">トップ</string>
    <string name="menu_mypage">Myページ</string>
    <string name="menu_other">その他</string>
    <string name="menu_route_map">路線図</string>
    <string name="menu_running_info">運行情報</string>
    <string name="menu_setting">設定</string>
    <string name="menu_timer_title">通勤タイマー</string>
    <string name="menu_timetable">時刻表</string>
    <string name="menu_title">乗換案内</string>
    <string name="menu_title_reccomend">Yahoo! JAPANアプリ</string>
    <string name="push_diainfo_page_info">端末の設定により、プッシュ通知がされない場合がありますので、必ず「プッシュ通知のご注意」をお読みください。</string>
    <string name="push_diainfo_page_title">運行情報の発生時にプッシュ通知でお知らせします。</string>
    <string name="push_line_title">通知する路線</string>
    <string name="push_notice">プッシュ通知のご注意</string>
    <string name="push_notice_page_link">ソフトウエアに関する規則（ガイドライン）</string>
    <string name="push_notice_page_text01">プッシュ通知は、環境やお使いの携帯端末の仕様、設定などにより、正常に受信できない場合があります。</string>
    <string name="push_notice_page_text02">プッシュ通知の送信は、1件のお知らせにつき1回限りとなります。不着時でも再送はできませんのでご了承ください。</string>
    <string name="push_notice_page_text03">お使いの携帯端末の設定によっては、プッシュ通知を受信しても、その到着をお知らせしない場合があります（例：おやすみモードなど）。詳しくはお使いの携帯端末の取扱説明書をご覧ください。</string>
    <string name="push_notice_page_text04">プッシュ通知を受信できなかった場合は、メニュー「運行情報」からご確認ください。</string>
    <string name="push_notice_page_text05">プッシュ通知の保証につきましては、弊社「ソフトウエアに関する規則（ガイドライン）」をご確認ください。</string>
    <string name="push_notice_page_title">運行情報プッシュ通知をご利用になる際は、以下を必ずお読みください。</string>
    <string name="push_set_info">通知方法に関しましては、端末の音設定より設定してください。</string>
    <string name="push_set_label">通知する</string>
    <string name="push_set_title">通知の設定</string>
    <string name="push_time_label">通知時間</string>
    <string name="push_time_title">通知時間指定</string>
    <string name="regist_rail_logout_info">Yahoo! JAPAN IDでログインすると、よく使う駅と路線を登録し、登録した路線の運行情報をご利用いただけます。</string>
    <string name="regist_station">登録駅</string>
    <string name="search_station_keyword">駅名を入力して探す</string>
    <string name="timetable_top_around_search">周辺の駅を検索しています。</string>
    <string name="timetable_top_get_info">駅取得</string>
    <string name="timetable_top_login">駅を登録するには、Yahoo! JAPAN IDでログインする必要があります。</string>
    <string name="timetable_top_no_arround">現在地付近の駅を取得できませんでした。</string>
    <string name="timetable_top_no_regist">登録されている駅はありません。駅情報ページから登録することができます。</string>
    <string name="title_station_regist">登録駅</string>
</resources>