<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center_vertical" android:background="@color/gray_light_common" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/push_notice_page_title" style="@style/txtS" />
            <TextView android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/push_notice_page_text01" style="@style/txtS" />
            <TextView android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/push_notice_page_text02" style="@style/txtS" />
            <TextView android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/push_notice_page_text03" style="@style/txtS" />
            <TextView android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/push_notice_page_text04" style="@style/txtS" />
            <TextView android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/push_notice_page_text05" style="@style/txtS" />
            <LinearLayout android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="openSoftware">
                <TextView android:textColor="@color/text_link" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/push_notice_page_link" android:layout_weight="1.0" style="@style/txtM" />
                <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow_right04" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:id="@id/AdView" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>