<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/info01_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/search_condition_mark" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_date_condition_mark" />
        <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/diainfo_mail" style="@style/txtL" />
    </LinearLayout>
    <TextView android:textColor="@color/route_detail_condition_font" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/diainfo_mail_description" style="@style/txtM" />
    <Button android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/diainfo_mail_link" android:background="@drawable/btn01_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="5.0dip" android:text="@string/diainfo_mail_entry" style="@style/btn_big_btn01" />
    <TextView android:textColor="@color/route_detail_condition_font" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/diainfo_mail_description_sub" />
</LinearLayout>