<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="1.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:background="@color/bg_home_base" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/push_diainfo_page_title" style="@style/txtS" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/push_diainfo_page_info" style="@style/txtS" />
            </LinearLayout>
            <include layout="@layout/divider_horizontal_line" />
            <jp.co.yahoo.android.apps.transit.viewparts.ListItemArrow android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="launchStation" app:titleText="@string/push_notice"
              xmlns:app="http://schemas.android.com/apk/res/jp.co.yahoo.android.apps.transit" />
            <jp.co.yahoo.android.apps.transit.viewparts.GrayTitleBar android:layout_width="fill_parent" android:layout_height="wrap_content" app:titleText="@string/push_set_title"
              xmlns:app="http://schemas.android.com/apk/res/jp.co.yahoo.android.apps.transit" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="10.0dip">
                    <TextView android:textStyle="bold" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/push_diainfo_set" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/push_set_label" android:singleLine="true" android:layout_weight="1.0" style="@style/txtL" />
                    <include android:id="@id/toggle" layout="@layout/custom_switch" />
                </LinearLayout>
                <TextView android:layout_gravity="center_vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/push_set_info" style="@style/txtS" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/diainfo_body" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <jp.co.yahoo.android.apps.transit.viewparts.GrayTitleBar android:id="@id/push_time_title" android:layout_width="fill_parent" android:layout_height="wrap_content" app:titleText="@string/push_time_title"
                  xmlns:app="http://schemas.android.com/apk/res/jp.co.yahoo.android.apps.transit" />
                <LinearLayout android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip">
                    <TextView android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/push_time_label" android:singleLine="true" android:layout_weight="1.0" style="@style/txtL" />
                    <Spinner android:textSize="@dimen/text_size_normal" android:id="@id/selected_push_time" android:layout_width="180.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" style="?android:attr/spinnerItemStyle" />
                </LinearLayout>
                <jp.co.yahoo.android.apps.transit.viewparts.GrayTitleBar android:id="@id/push_setting_title" android:layout_width="fill_parent" android:layout_height="wrap_content" app:titleText="@string/push_line_title"
                  xmlns:app="http://schemas.android.com/apk/res/jp.co.yahoo.android.apps.transit" />
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/no_regist" android:padding="@dimen/padding_normal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/err_msg_no_regist_rail" />
                    <TextView android:textColor="@color/text_link" android:background="@drawable/list_blue_background_selector" android:padding="@dimen/padding_small" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_entry_rail" android:onClick="registerRail" style="@style/txtL" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/button_push_cancel" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="10.0dip" android:minHeight="37.0dip" android:text="@string/button_cancel" android:layout_weight="1.0" android:onClick="cancel" style="@style/btn_big_btn03" />
        <Button android:id="@id/button_push_set" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:minHeight="37.0dip" android:text="@string/button_set" android:layout_weight="1.0" android:onClick="saveAndBack" style="@style/btn_big_btn02" />
    </LinearLayout>
    <RelativeLayout android:id="@id/AdView" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>