<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <jp.co.yahoo.android.apps.transit.viewparts.GrayTitleBar android:id="@id/no_login" android:layout_width="fill_parent" android:layout_height="wrap_content" app:titleText="@string/regist_station" app:titleType="1"
      xmlns:app="http://schemas.android.com/apk/res/jp.co.yahoo.android.apps.transit" />
    <Button android:id="@id/login_button" android:layout_marginTop="10.0dip" android:text="@string/label_preferences_login" style="@style/btn_big_btn02" />
    <TextView android:textSize="@dimen/text_size_smallest" android:textColor="@color/route_detail_condition_font" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/regist_rail_logout_info" />
</LinearLayout>